--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
+    "axios": "^0.27.2",
     "localforage": "^1.10.0",
     "msw": "^0.44.2",
     "react": "^18.2.0",
