--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
